ipynb for copula

--- a/gan/copula.ipynb
+++ b/gan/copula.ipynb
@@ -107,14 +107,14 @@
     "#                                          batch_size=batch_size, \n",
     "#                                          shuffle=True)\n",
     "# Download MNIST dataset\n",
-    "mnist_dataset = datasets.FashionMNIST(root='data', \n",
+    "fashion_mnist_dataset = datasets.FashionMNIST(root='data', \n",
     "                               train=True, \n",
     "                               transform=transform, \n",
     "                               download=True)\n",
     "# Split original training set into 70% train and 30% validation\n",
-    "train_size = int(0.7 * len(mnist_dataset))\n",
-    "val_size = len(mnist_dataset) - train_size\n",
-    "train_dataset, val_dataset = random_split(mnist_dataset, [train_size, val_size])\n",
+    "train_size = int(0.7 * len(fashion_mnist_dataset))\n",
+    "val_size = len(fashion_mnist_dataset) - train_size\n",
+    "train_dataset, val_dataset = random_split(fashion_mnist_dataset, [train_size, val_size])\n",
     "\n",
     "# Select a random image from the new training set\n",
     "random_index = np.random.randint(len(train_dataset))\n",
@@ -164,17 +164,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Class: 0\r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def compute_cdf_mapping(images):\n",
     "    \"\"\"\n",
@@ -215,20 +207,51 @@
     "    transformed_image = transformed_image.view(pixel_size, pixel_size)  # Reshape back to image size\n",
     "    return transformed_image\n",
     "\n",
-    "def compute_mean_and_covariance(images, epsilon=1e-4):\n",
-    "    \"\"\"\n",
-    "    Compute the covariance matrix of the dataset, ensuring it is positive definite.\n",
-    "    \"\"\"\n",
-    "    images = images.float()  # Ensure floating-point type\n",
-    "    images = images.view(images.shape[0], -1)  # Flatten images\n",
-    "    mean_vector = torch.mean(images, dim=0, keepdim=True)\n",
-    "    centered_images = images - mean_vector\n",
-    "    covariance_matrix = torch.matmul(centered_images.T, centered_images) / (images.shape[0] - 1)\n",
+    "# def compute_mean_and_covariance(images, epsilon=1e-4):\n",
+    "#     \"\"\"\n",
+    "#     Compute the covariance matrix of the dataset, ensuring it is positive definite.\n",
+    "#     \"\"\"\n",
+    "#     images = images.float()  # Ensure floating-point type\n",
+    "#     images = images.view(images.shape[0], -1)  # Flatten images\n",
+    "#     mean_vector = torch.mean(images, dim=0, keepdim=True)\n",
+    "#     centered_images = images - mean_vector\n",
+    "#     covariance_matrix = torch.matmul(centered_images.T, centered_images) / (images.shape[0] - 1)\n",
     "    \n",
-    "    # Regularization: Add a small identity matrix to ensure positive definiteness\n",
-    "    covariance_matrix += epsilon * torch.eye(covariance_matrix.shape[0])\n",
+    "#     # Regularization: Add a small identity matrix to ensure positive definiteness\n",
+    "#     covariance_matrix += epsilon * torch.eye(covariance_matrix.shape[0])\n",
     "    \n",
-    "    return covariance_matrix, mean_vector\n",
+    "#     return covariance_matrix, mean_vector\n",
+    "\n",
+    "def compute_covariance_in_uniform_sapce(training_data, epsilon = 1e-5):\n",
+    "    \"\"\"\n",
+    "    Compute the covariance matrix Σ_u of uniforms obtained by applying marginal CDFs to a dataset of shape (n, d, d).\n",
+    "    \n",
+    "    Args:\n",
+    "        training_data (torch.Tensor): Input tensor of shape (n, d, d), where:\n",
+    "            - n: Number of samples\n",
+    "            - d: Number of pixels per dimension\n",
+    "    \n",
+    "    Returns:\n",
+    "        torch.Tensor: Covariance matrix Σ_u of shape (d*d, d*d) for the uniforms.\n",
+    "    \"\"\"\n",
+    "    n, d, _ = training_data.shape\n",
+    "    \n",
+    "    # Flatten the images into vectors: shape (n, d*d)\n",
+    "    flattened = training_data.view(n, -1)  # (n, d^2)\n",
+    "    \n",
+    "    # Compute ranks for each pixel across samples\n",
+    "    ranks = torch.argsort(torch.argsort(flattened, dim=0), dim=0)  # (n, d^2)\n",
+    "    \n",
+    "    # Convert ranks to uniforms using (rank + 1)/(n + 1)\n",
+    "    uniforms = (ranks.float() + 1.0) / (n + 1.0)  # (n, d^2)\n",
+    "    \n",
+    "    # Center the uniforms (mean of U(0,1) is 0.5)\n",
+    "    centered = uniforms - 0.5  # (n, d^2)\n",
+    "    \n",
+    "    # Compute covariance matrix (unbiased estimator)\n",
+    "    covariance_matrix_unifrom = torch.matmul(centered.T, centered) / (n - 1)  # (d^2, d^2)\n",
+    "    \n",
+    "    return covariance_matrix_unifrom + epsilon*torch.eye(covariance_matrix_unifrom.shape[0])\n",
     "\n",
     "def generate_random_uniform_images_from_gaussian(covariance_matrix_gaussian, num_samples = 1):\n",
     "    vector_size = covariance_matrix_gaussian.size(0)\n",
@@ -427,53 +450,46 @@
     "#     scaled_uniform = uniform_sample * scale_factor + 0.5 * (1 - scale_factor)\n",
     "    \n",
     "#     return scaled_uniform.reshape(-1, 1)  # Return as column vector\n",
-    "def uniform_to_gaussian_covariance(sigma_u, epsilon = 1e-4):\n",
-    "    \"\"\"\n",
-    "    Convert the covariance matrix of a multivariate uniform (0,1) distribution\n",
-    "    to the covariance matrix of a multivariate normal distribution \n",
-    "    after applying the inverse Gaussian CDF transformation.\n",
-    "\n",
-    "    Args:\n",
-    "        sigma_u (torch.Tensor): Covariance matrix of the uniform distribution (d x d)\n",
-    "\n",
-    "    Returns:\n",
-    "        sigma_n (torch.Tensor): Covariance matrix of the corresponding Gaussian distribution (d x d)\n",
-    "    \"\"\"\n",
-    "    # Compute the correlation matrix from Sigma_U\n",
-    "    std_u = torch.sqrt(torch.diag(sigma_u))\n",
-    "    corr_u = sigma_u / (std_u[:, None] * std_u[None, :])  # Normalize to get correlation\n",
-    "\n",
-    "    # Apply the Gaussian copula transformation\n",
-    "    corr_n = 2 * torch.sin((torch.pi / 6) * corr_u) + torch.eye(sigma_u.shape[0])\n",
-    "\n",
-    "    # Convert back to covariance by assuming standard normal variance (1)\n",
-    "    sigma_n = corr_n  # Since std_n = 1 for standard normal, no need to scale back\n",
-    "\n",
-    "    return sigma_n\n",
-    "def compute_gaussian_covariance_from_uniform(Sigma_u, epsilon = 1e-4):\n",
+    "def compute_gaussian_covariance_from_uniform(covariance_matrix_unifrom, epsilon = 1e-4):\n",
     "    \"\"\"\n",
     "    Compute the Gaussian covariance matrix from the uniform covariance matrix.\n",
     "    \n",
     "    Args:\n",
-    "        Sigma_u (torch.Tensor): Covariance matrix of the uniforms, shape (d, d).\n",
+    "        covariance_matrix_unifrom (torch.Tensor): Covariance matrix of the uniforms, shape (d, d).\n",
     "    \n",
     "    Returns:\n",
     "        torch.Tensor: Gaussian covariance matrix, shape (d, d).\n",
     "    \"\"\"\n",
     "    # Compute Pearson correlation matrix of the uniforms\n",
-    "    diag_var_u = torch.diag(Sigma_u)  # Variances of uniforms (should be ~1/12)\n",
+    "    diag_var_u = torch.diag(covariance_matrix_unifrom)  # Variances of uniforms (should be ~1/12)\n",
     "    std_u = torch.sqrt(diag_var_u)    # Standard deviations of uniforms\n",
     "    outer_std = torch.outer(std_u, std_u)\n",
-    "    R_u = Sigma_u / outer_std         # Pearson correlation matrix of uniforms\n",
+    "    R_u = covariance_matrix_unifrom / outer_std         # Pearson correlation matrix of uniforms\n",
     "\n",
     "    # Compute Gaussian correlation matrix\n",
     "    R_n = 2 * torch.sin((math.pi / 6) * R_u)\n",
     "\n",
     "    # Ensure diagonal is exactly 1 (due to numerical precision)\n",
     "    R_n.fill_diagonal_(1.0)\n",
-    "    return R_n + torch.eye(R_u.shape[0])\n",
-    "\n",
-    "\n",
+    "    covariance_matrix_gaussian =  R_n + torch.eye(R_u.shape[0])\n",
+    "    return covariance_matrix_gaussian\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Class: 9, image 100/100\r"
+     ]
+    }
+   ],
+   "source": [
     "def generate_uniform_random_cifar_rgb_per_class(label_idx, num_samples = 5000, set_name = 'cifar-rgb', ifPlot = False):\n",
     "    num_bands = 1\n",
     "    if set_name == 'mnist':\n",
@@ -483,13 +499,13 @@
     "    elif set_name == 'fashion-mnist':\n",
     "        images = fashion_mnist_images[fashion_mnist_labels == label_idx]\n",
     "        pixel_size = images.shape[2]\n",
-    "        train_images = mnist_images[mnist_labels == label_idx]\n",
+    "        train_images = fashion_mnist_images[fashion_mnist_labels == label_idx]\n",
     "    elif set_name == 'cifar-gray':\n",
     "        pixel_size = cifar_images.shape[2]\n",
     "        # images = cifar_gray.squeeze(dim=1)\n",
     "        # images = cifar_gray[torch.tensor(cifar_labels) == label_idx].squeeze(dim=1)\n",
     "        # train_images = images.reshape(images.shape[0], images.shape[1]*images.shape[2])\n",
-    "        train_images = cifar_gray[torch.tensour(cifar_labels) == label_idx,:,:].squeeze(dim=1)\n",
+    "        train_images = cifar_gray[torch.tensor(cifar_labels) == label_idx,:,:].squeeze(dim=1)\n",
     "        print(train_images.shape)\n",
     "    elif set_name == 'cifar-rgb':\n",
     "        num_bands = 3\n",
@@ -497,6 +513,7 @@
     "        for band_idx in range(num_bands): train_images = cifar_images[torch.tensor(cifar_labels) == label_idx,band_idx,:,:].squeeze(dim=1)\n",
     "    else: return [], []\n",
     "    \n",
+    "    num_samples = min(num_samples, train_images.shape[0])\n",
     "    uniform_real_images = torch.zeros(num_samples, num_bands, pixel_size, pixel_size)\n",
     "    uniform_fake_images = torch.zeros(num_samples, num_bands, pixel_size, pixel_size)\n",
     "    synthetic_image = torch.zeros(num_bands, pixel_size, pixel_size)\n",
@@ -504,16 +521,16 @@
     "    for band_idx in range(num_bands):\n",
     "        pixel_cdf_map[band_idx] = compute_cdf_mapping(train_images.reshape(-1, pixel_size**2))\n",
     "        uniform_real_images[:, band_idx, :, :], _ = transform_dataset_to_uniform_and_gaussian_vectorized(train_images[0:num_samples])\n",
-    "        # gaussian_images[gaussian_images > 1000] = 1000\n",
-    "        covariance_matrix_uniform, mean_uniform = compute_mean_and_covariance(uniform_real_images[:, band_idx, :, :], epsilon = 0.000001)\n",
-    "        covariance_matrix_gaussian = uniform_to_gaussian_covariance(covariance_matrix_uniform, epsilon = 1e-4) \n",
-    "        covariance_matrix_gaussian = compute_gaussian_covariance_from_uniform(covariance_matrix_uniform, epsilon = 0) \n",
-    "        # uniform_fake_images[:, band_idx,:,:] = generate_random_uniform_images(covariance_matrix_gaussian, num_samples = num_samples)\n",
-    "        uniform_fake_images[:, band_idx,:,:] = generate_random_uniform_images_from_gaussian(covariance_matrix_uniform)\n",
+    "        \n",
+    "        covariance_matrix_uniform = compute_covariance_in_uniform_sapce(train_images, epsilon=1e-8)\n",
+    "        uniform_fake_images[:, band_idx,:,:] = generate_random_uniform_images(covariance_matrix_uniform, num_samples = num_samples)\n",
+    "        \n",
+    "        # covariance_matrix_gaussian = compute_gaussian_covariance_from_uniform(covariance_matrix_uniform, epsilon = 1e-6) \n",
+    "        # uniform_fake_images[:, band_idx,:,:] = generate_random_uniform_images_from_gaussian(covariance_matrix_gaussian)\n",
     "\n",
     "\n",
     "    if ifPlot :\n",
-    "        number_of_rows_or_columns = int(num_samples**0.5)\n",
+    "        number_of_rows_or_columns = min(int(num_samples**0.5), 10)\n",
     "        fig, axs = plt.subplots(number_of_rows_or_columns, number_of_rows_or_columns, figsize=(number_of_rows_or_columns, number_of_rows_or_columns))\n",
     "        idx = -1\n",
     "        for idx_i in range(number_of_rows_or_columns):\n",
@@ -545,13 +562,15 @@
     "        plt.close(fig)  # Close figure to free memory\n",
     "    return uniform_real_images, uniform_fake_images\n",
     "\n",
-    "num_samples = 100\n",
-    "num_classes = 2\n",
+    "num_samples = 10000\n",
+    "num_classes = 10\n",
     "uniform_cifar_real_images = torch.zeros(num_samples*num_classes, 3, 32, 32)\n",
     "uniform_cifar_fake_images = torch.zeros(num_samples*num_classes, 3, 32, 32)\n",
     "set_name = 'mnist'\n",
+    "# set_name = 'fashion-mnist'\n",
     "set_name = 'cifar-rgb'\n",
-    "ifPlot = False\n",
+    "# set_name = 'cifar-gray'\n",
+    "ifPlot = True\n",
     "if num_samples <= 400: ifPlot = True\n",
     "for label_idx in range(num_classes): \n",
     "    print(f\"Class: {label_idx}\" , end=\"\\r\")\n",
